# frost-rust

./: AGENTS.md  Cargo.toml  PRIORITY_TASK.md  README.md  demo-log.md  frost-demo.py  sequence-diagram.md
demo/: alice-registry.json  bob-registry.json  carol-registry.json  dan-registry.json
demo-scripts/: config  coordinator  participant  setup
src/: lib.rs  main.rs  participants.rs
src/cmd/: busy.rs  check.rs  common.rs  dkg_cli.rs  mod.rs  parallel.rs  registry.rs  storage.rs
src/cmd/dkg/: common.rs  coordinator.rs  group_invite.rs  mod.rs  participant.rs  proposed_participant.rs
src/cmd/dkg/coordinator/: finalize.rs  invite.rs  mod.rs  round1.rs  round2.rs
src/cmd/dkg/coordinator/round1/: mod.rs
src/cmd/dkg/coordinator/round2/: collect.rs  mod.rs
src/cmd/dkg/finalize/: collect.rs  mod.rs  respond.rs  send.rs
src/cmd/dkg/invite/: group_invite.rs  mod.rs  receive.rs  respond.rs  send.rs
src/cmd/dkg/participant/: finalize.rs  receive.rs  round1.rs  round2.rs
src/cmd/dkg/round1/: collect.rs  mod.rs
src/cmd/dkg/round2/: collect.rs  mod.rs  respond.rs  send.rs
src/cmd/owner/: set.rs
src/cmd/participant/: add.rs
src/cmd/registry/: mod.rs
src/cmd/registry/owner/: mod.rs
src/cmd/registry/participant/: add.rs  mod.rs
src/cmd/sign/: collect.rs  commit.rs  common.rs  finalize.rs  mod.rs  receive.rs
src/cmd/sign/coordinator/: collect.rs  finalize.rs  invite.rs  mod.rs  round1.rs  round2.rs  start.rs
src/cmd/sign/participant/: attach.rs  commit.rs  finalize.rs  mod.rs  receive.rs  round1.rs  round2.rs
src/dkg/: group_invite.rs  mod.rs  proposed_participant.rs
src/registry/: group_record.rs  mod.rs  owner_record.rs  participant_record.rs  registry_impl.rs
tests/: group_invite.rs  introductions.rs  owner_set.rs  participant_add.rs
tests/common/: mod.rs
tests/fixtures/: README.md
