[package]
name = "frost-hubert"
version = "0.1.0"
edition = "2024"
description = "Command-line tool for FROST DKG and signing using Hubert as the distributed substrate"
authors = ["Blockchain Commons"]
license = "BSD-2-Clause-Patent"
repository = "https://github.com/BlockchainCommons/frost-hubert-rust"
readme = "README.md"
keywords = ["cli", "frost", "xid"]
categories = ["cryptography", "command-line-utilities"]
default-run = "frost"

[[bin]]
name = "frost"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0.0"
clap = { version = "^4.4.3", features = ["derive"] }
bc-components = "^0.30.0"
bc-envelope = { version = "^0.39.0", features = ["multithreaded"] }
bc-xid = "^0.18.0"
provenance-mark = "0.18.0"
serde = { version = "^1.0.0", features = ["derive"] }
serde_json = "^1.0.135"
gstp = "^0.13.0"
frost-ed25519 = "2.1.0"
hubert = "^0.5.0"
bc-ur = "^0.18.0"
mainline = "6"
reqwest = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync"] }
rand_core = "^0.9.3"
indicatif = "0.18.3"

[dev-dependencies]
assert_cmd = "^2.0.12"
predicates = "^3.1.0"
tempfile = "^3.10.1"
indoc = "^2.0.0"
bc-rand = "^0.5.0"
similar-asserts = "1.7.0"
